<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_book"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent="0.4"
                    android:layout_height="200dp"
                    android:contentDescription="@string/description_imagem_do_livro"
                    app:srcCompat="@drawable/bg_image_not_found"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:scaleType="fitCenter"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:minHeight="200dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintWidth_percent="0.6"
                    app:layout_constraintLeft_toRightOf="@id/iv_book"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/tv_book_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="nome do livro"
                        android:layout_marginBottom="12dp"
                        android:textSize="18sp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/authors"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/tv_book_authors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text=" autor1, autor2" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_de_lancamento"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/tv_book_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text=" data" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:id="@+id/description_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="8dp"
                app:layout_constraintTop_toBottomOf="@id/container_header">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descricao"
                    style="@style/Title_Text_Style"/>
                <TextView
                    android:id="@+id/tv_book_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="6"
                    android:justificationMode="inter_word"
                    tools:text="@tools:sample/lorem/random"
                    tools:targetApi="o"
                    tools:ignore="VisualLintLongText" />
                <TextView
                    android:id="@+id/tv_expand_description"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:focusable="true"
                    android:text="@string/read_more"
                    android:textStyle="bold"
                    android:textColor="@color/light_blue"
                    android:clickable="true" />
            </LinearLayout>
            <Button
                android:id="@+id/btn_download_pdf"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/download_pdf"
                android:layout_marginVertical="12dp"
                app:layout_constraintTop_toBottomOf="@id/description_container"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_book"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="25dp"
        android:contentDescription="@string/fab_add_book"
        android:src="@drawable/ic_favorite_deselected" />
</RelativeLayout>

