<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/img_book"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.3"
            android:contentDescription="@string/description_imagem_do_livro"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/bg_image_not_found"/>
        <LinearLayout
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.7"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintLeft_toRightOf ="@id/img_book">
            <TextView
                android:id="@+id/tv_book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authors"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_book_authors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text=" autor1, autor2" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_de_lancamento"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_book_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="dd/mm/yyyy"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
